test/files/neg/t696b.check
t696b.scala:5: error: diverging implicit expansion for type TypeUtil0.Type[Any]
starting with method WithType in object TypeUtil0
  as[Any](null)
         ^
t696b.scala:6: error: diverging implicit expansion for type TypeUtil0.Type[X]
starting with method WithType in object TypeUtil0
  def foo[X]() = as[X](null)
                      ^
two errors found
